objects/SLP_Secondary_Industry__c.object
<CustomObject>
    <fields>
        <fullName>Industry_Name__c</fullName>
        <label>Industry Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Secondary_Industry_Name__c</fullName>
        <label>Secondary Industry Name</label>
        <length>102</length>
        <type>Text</type>
    </fields>
    <label>SLP Secondary Industry</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Secondary_Industry_Name__c</columns>
        <columns>Industry_Name__c</columns>
        <columns>Is_Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>SLPSE-{00000000}</displayFormat>
        <label>SLP Secondary Expert ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SLP Secondary Industries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>